--- a/service.yaml
+++ b/service.yaml
@@ -8,5 +8,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-  type: LoadBalancer
+      targetPort: 5000
+      nodePort: 30007
+  type: NodePort
