--- a/config/nginx-configmap.yaml
+++ b/config/nginx-configmap.yaml
@@ -8,7 +8,7 @@ data:
         listen 80;
 
         location / {
-            proxy_pass http://use-case-service:5000;
+            proxy_pass http://localhost:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
