feat: switch to aws load balancer

--- a/config/deployment.yaml
+++ b/config/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: use-case
         image: sumeyyeakkas/use-case:latest7
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         livenessProbe:
