--- a/config/service.yaml
+++ b/config/service.yaml
@@ -9,4 +9,6 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5000
-  type: ClusterIP
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: use-case
