--- a/config/service.yaml
+++ b/config/service.yaml
@@ -9,6 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5000
-  type: NodePort
-  selector:
-    app.kubernetes.io/name: use-case
+  type: LoadBalancer
